--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "webpack-dev-middleware": "^7.1.1"
+    "gh-pages": "^4.0.0"
   }
 }
